[tool.poetry]
name = "unpast"
version = "0.1.10"
description = "A novel method for unsupervised patient stratification."
authors = ["Olga Zolotareva (ozolotareva)", "Michael Hartung (Maiykol)"]
maintainers = ["Olga Zolotareva (ozolotareva)", "Michael Hartung (Maiykol)", "Alexey Savchik (savfod)", "Yuliya Burankova (freddsle)"]
license = "GPL-3.0"
readme = "README.md"
packages = [{ include = "unpast" }]
repository = "https://github.com/ozolotareva/unpast"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fisher = {git = "https://github.com/brentp/fishers_exact_test.git"}
pandas = "2.2.3"
python-louvain = "0.15"
matplotlib = "3.10.0"
seaborn = "0.13.2"
numba = "0.61.0rc1"
numpy = "2.1.3"
scikit-learn = "1.5.2"
scikit-network = "0.33.1"
scipy = "1.14.1"
statsmodels = "0.14.4"
lifelines = "0.27.4"
pytest = "^8.3.3"
cython = "0.29.23"
kneed = "^0.8.5"

[tool.poetry.scripts]
unpast = "unpast.run_unpast:main"

[build-system]
requires = ["poetry-core", "setuptools", "wheel", "cython"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
